# voila_mlir

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  configure  defs.hpp.in  lexer.gv  voila.lex  voila.y
benchmark/: CMakeLists.txt  benchmark_defs.hpp.in  compress.sh  dict_compress.py
benchmark/include/: BenchmarkState.hpp  BenchmarkUtils.hpp  ColumnTypes.hpp  DateReformatter.hpp  DictionaryCompressor.hpp  QueryGenerator.hpp  TableReader.hpp  Tables.hpp  no_partitioning_join.hpp
benchmark/queries/: Q1.voila  Q18.voila  Q3.voila  Q6.voila  Q9.voila
benchmark/src/: CMakeLists.txt
benchmark/src/tools/: CMakeLists.txt  DateReformatter.cpp  DictionaryCompressor.cpp  TablePreprocessor.cpp  Tables.cpp
benchmark/src/tpc/: BenchmarkState.cpp  CMakeLists.txt  QueryGenerator.cpp  TPCHBenchmark.cpp  benchmark_main.cpp
include/: ASTNodes.hpp  ArgsOutOfRangeError.hpp  Config.hpp  DotVisualizer.hpp  IncompatibleTypesException.hpp  JITInvocationError.hpp  LLVMGenerationError.hpp  LLVMOptimizationError.hpp  MLIRGenerationError.hpp  MLIRGenerator.hpp  MLIRGeneratorImpl.hpp  MLIRLoweringError.hpp  NotImplementedException.hpp  NotInferedException.hpp  ParsingError.hpp  Profiler.hpp  ProfilingException.hpp  Program.hpp  Type.hpp  TypeInferencePass.hpp  TypeInferer.hpp  TypeNotInferedException.hpp  Types.hpp  VariableAlreadyDeclaredException.hpp  voila.hpp  voila_parser.hpp
include/ast/: ASTNode.hpp  ASTNodeVariant.hpp  Add.hpp  (+61 more)
src/: ASTNode.cpp  CMakeLists.txt  Config.cpp  DotVisualizer.cpp  MLIRGenerator.cpp  MLIRGeneratorImpl.cpp  MainFunctionNotFoundException.hpp  MlirGenerationException.hpp  MlirModuleVerificationError.hpp  NonMatchingArityException.hpp  NotImplementedException.hpp  Program.cpp  ShapeInferenceInterface.cpp  ShapeInferencePass.cpp  TypeInferencePass.cpp  TypeInferer.cpp  Types.cpp  VoilaInlinerInterface.cpp  main.cpp  voila_parser.cpp
src/ast/: ASTNode.cpp  Add.cpp  AggrAvg.cpp  AggrCnt.cpp  AggrMax.cpp  AggrMin.cpp  AggrSum.cpp  Aggregation.cpp  And.cpp  Arithmetic.cpp  Assign.cpp  BooleanConst.cpp  CMakeLists.txt  Comparison.cpp  Const.cpp  Div.cpp  DotVisualizer.cpp  Emit.cpp  Eq.cpp  Expression.cpp  FltConst.cpp  Fun.cpp  FunctionCall.cpp  Gather.cpp  Ge.cpp  Geq.cpp  Hash.cpp  IExpression.cpp  IStatement.cpp  Insert.cpp  IntConst.cpp  Le.cpp  Leq.cpp  Load.cpp  Logical.cpp  Lookup.cpp  Loop.cpp  Main.cpp  Mod.cpp  Mul.cpp  (+16 more)
src/compiler/: CMakeLists.txt  main.cpp
src/compiler/opt/: CMakeLists.txt  voila_opt.cpp
src/compiler/translate/: CMakeLists.txt  voila_translate.cpp
src/mlir/: CMakeLists.txt  VoilaDialect.cpp  VoilaOps.cpp
src/mlir/Dialects/: CMakeLists.txt
src/mlir/Dialects/FPArith/: CMakeLists.txt
src/mlir/Dialects/FPMath/: CMakeLists.txt
src/mlir/Dialects/FPMath/IR/: CMakeLists.txt  FPMathAttr.cpp  FPMathDialect.cpp  FPMathOps.cpp  FPMathTypes.cpp
src/mlir/Dialects/FPMath/Translation/: CMakeLists.txt  FPMathToLLVMIRTranslation.cpp
src/mlir/Dialects/Strings/: CMakeLists.txt
src/mlir/Dialects/Voila/: CMakeLists.txt
src/mlir/Dialects/Voila/IR/: VoilaDialect.cpp  VoilaOps.cpp
src/mlir/Dialects/Voila/Interfaces/: CMakeLists.txt  PredicationOpInterface.cpp  VoilaInlinerInterface.cpp
src/mlir/Dialects/Voila/Passes/: CMakeLists.txt  LinalgTiledLoopsToAffineForPass.cpp  MemOpsToAffineMemOpsConversionPass.cpp  ParallelLoopToGpuMappingPass.cpp  PredicationForwardingPass.cpp  VoilaBufferizePass.cpp  VoilaToAffineLoweringPass.cpp  VoilaToLLVMLoweringPass.cpp  VoilaToLinalgLoweringPass.cpp
src/mlir/Dialects/Voila/lowering/: AvgOpLowering.cpp  CMakeLists.txt  CountOpLowering.cpp  EmitOpLowering.cpp  GatherOpLowering.cpp  HashOpLowering.cpp  InsertOpLowering.cpp  LinalgTiledLoopsToAffineForPattern.cpp  LoadOpLowering.cpp  LookupOpLowering.cpp  LoopOpLowering.cpp  MaxOpLowering.cpp  MinOpLowering.cpp  NotOpLowering.cpp  ReadOpLowering.cpp  ScatterOpLowering.cpp  SelectOpLowering.cpp  SumOpLowering.cpp
src/mlir/Dialects/Voila/lowering/utility/: HashingUtils.cpp
src/mlir/IR/: VoilaOps.cpp
src/mlir/Interfaces/: CMakeLists.txt  PredicationOpInterface.cpp  VoilaInlinerInterface.cpp
src/mlir/Passes/: CMakeLists.txt  LinalgTiledLoopsToAffineForPass.cpp  MemOpsToAffineMemOpsConversionPass.cpp  ParallelLoopToGpuMappingPass.cpp  PredicationForwardingPass.cpp  VoilaBufferizePass.cpp  VoilaToAffineLoweringPass.cpp  VoilaToLLVMLoweringPass.cpp  VoilaToLinalgLoweringPass.cpp
src/mlir/lowering/: ArithmeticOpLowering.cpp  AvgOpLowering.cpp  CMakeLists.txt  CountOpLowering.cpp  EmitOpLowering.cpp  GatherOpLowering.cpp  HashOpLowering.cpp  InsertOpLowering.cpp  LinalgTiledLoopsToAffineForPass.cpp  LinalgTiledLoopsToAffineForPattern.cpp  LookupOpLowering.cpp  LoopOpLowering.cpp  MaxOpLowering.cpp  MinOpLowering.cpp  MoveOpLowering.cpp  NotOpLowering.cpp  ReadOpLowering.cpp  ScatterOpLowering.cpp  SelectOpLowering.cpp  SumOpLowering.cpp  VectorMultiReductionPass.cpp  VoilaToAffineLoweringPass.cpp  VoilaToLLVMLoweringPass.cpp  VoilaToLinalgLoweringPass.cpp
tests/: CMakeLists.txt  TPCBenchmarkTests.cpp  VoilaOpTests.cpp  lit.cfg.py  lit.site.cfg.py.in  main.cpp  no_partitioning_join.hpp  test_defs.hpp.in
tests/lowering/: complex_lookup.voila  grouped_avg.voila  predicated_add.voila  simple_add.voila  simple_hash.voila  simple_lookup.voila  simple_max.voila  simple_select.voila
tests/translation/: add.voila  and.voila  div.voila  hash.voila  insert.voila  lookup.voila  mul.voila  or.voila  params.voila  select.voila  sub.voila
tests/voila/: complex_hash.voila  complex_insert.voila  complex_lookup.voila  grouped_max.voila  grouped_min.voila  simple_add.voila  simple_avg.voila  simple_count.voila  simple_gather.voila  simple_insert.voila  simple_lookup.voila  simple_loop.voila  simple_max.voila  simple_min.voila  simple_read.voila  simple_sub.voila  simple_sum.voila  test.voila
tests/voila/lowering/: complex_lookup.voila  grouped_count.voila  grouped_sum.voila  simple_add.voila  simple_insert.voila  simple_sum.voila
tests/voila/translation/: add.voila  and.voila  div.voila  func.voila  funcs.voila  not.voila  params.voila
(+99 files in other folders)
